JDB doc